# Offpunk History

## 2.0 - unreleased
List of things before release
TODO: man pages for netcache, ansicat, opnk
TODO: better handling of folders with opnk
This is an an experimental and unstable release. Lot of breakages are expected.
Wait for 2.1 if you are not willing to do testing/bug reporting.
- Licence has been changed to AGPL for ideological reasons
- New command-line tool: "netcache"
- New command-line tool: "ansicat"
- New command-line tool: "opnk"
- URL do not default anymore to "gemini://" if not protocol are indicated.
- Images of html files are now downloaded with the html (slower sync but better reading experience)
- Reading position is saved for the whole session
- Rendering is cached, allowing faster browsing
- Gopher-only: we don’t support naming a page after the name of the incoming link
- "--config-file" allows to start offpunk with custom config (#16)
- "accept_bad_ssl_certificates" now more agressive for http and really accepts them all
- Gemini-only: support for client generated certificates has been removed
- blocked domains with "redirect" now also blocks related subdomains.
- "file" is now marked as a dependency (thank Guillaume Loret)

## 1.10 - July 31st 2023
- IMPORTANT : new optional dependency : python-chardet
- IMPORTANT : Gopher directory index filename changed from "index.txt" to "gophermap". To update the cache to the new format run the `migrate-offpunk-cache` script (Sotiris Papatheodorou)
- "set accept_bad_ssl_certificates True" now also used for Gemini expired certificates
- Add missing chardet module (Sotiris Papatheodorou)
- Fix merging dictionaries with common keys (Sotiris Papatheodorou)
- Fix Gopher requests (rewrite URL parsing code per RFC 4266)

## 1.9.2 - March 13th 2023
- Switch from setup.py to flit (Anna cybertailor Vyalkova)
- Bump requirements to python >= 3.7 (Anna cybertailor Vyalkova)

## 1.9.1 - March 8th 2023
- Fixed crash with archive without GI (thanks Étienne Mollier)

## 1.9 - March 8th 2023