@@ -1,6 +1,6 @@
 Offpunk Offline Gemini client
 And the Offpunk tools suite: netcache, ansicat, opnk.
-(C) From 2021:  Ploum <offpunk20@ploum.eu>
+(C) From 2021:  Ploum <offpunk2@ploum.eu>
 
 Derived from AV-98 and Agena by Solderpunk,
 (C) 2019, 2020: Solderpunk <solderpunk@sdf.org>
