@@ -1,7 +1,7 @@
                     GNU AFFERO GENERAL PUBLIC LICENSE
                        Version 3, 19 November 2007
 
-Copyright (c) 2022, Ploum <offpunk110 at ploum.eu> and contributors.
+Copyright (c) 2022, Ploum <offpunk2 at ploum.eu> and contributors.
 All rights reserved.
 
  Copyright (C) 2007 Free Software Foundation, Inc. <https://fsf.org/>
