@@ -86,4 +86,4 @@ is a fork of the original AV-98 by
 and was originally called AV-98-offline as an experimental branch.
 .
 .Sh AUTHORS
-.An Lionel Dricot (Ploum) Aq Mt offpunk110 at ploum.eu
+.An Lionel Dricot (Ploum) Aq Mt offpunk2 at ploum.eu
