@@ -7,6 +7,7 @@ TODO: better handling of folders with opnk
 This is an an experimental and unstable release. Lot of breakages are expected.
 Wait for 2.1 if you are not willing to do testing/bug reporting.
 - Licence has been changed to AGPL for ideological reasons
+- Contact adress has been changed to offpunk2 on the same domain (because of spam)
 - New command-line tool: "netcache"
 - New command-line tool: "ansicat"
 - New command-line tool: "opnk"
